<resources>
    <string name="app_name">Login</string>
    <string name="Name">Nombre</string>
    <string name="Password">Contraseña</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="Volver">Volver</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="bienvenida">BIENVENIDA</string>
    <string name="aRecibir">Esperando respuesta...</string>
</resources>